third_party/move/move-compiler-v2/tests/more-v1/translated_ir_tests/move/commands/abort_negative_stack_size.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/translated_ir_tests/move/commands/abort_negative_stack_size.move:6:1
  │
6 │ }
  │ ^
  │ │
  │ Unexpected '}'
  │ Expected an expression term
